[gd_scene load_steps=6 format=3 uid="uid://bojwglgwig4sp"]

[ext_resource type="Theme" uid="uid://cl6g0lyje5r7f" path="res://Assets/start_menu.tres" id="1_iqj4s"]
[ext_resource type="Script" path="res://Scripts/SettingsMenu.gd" id="2_hv8ts"]

[sub_resource type="Animation" id="Animation_xkgsq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Darken:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.235294)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_0jcsu"]
resource_name = "open settings menu"
length = 2.0
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Darken:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 13.4544),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.627451)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.2, 2),
"transitions": PackedFloat32Array(1, 0.535887, 0.5),
"update": 0,
"values": [Vector2(-1152, 0), Vector2(50, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a356f"]
_data = {
"RESET": SubResource("Animation_xkgsq"),
"open settings menu": SubResource("Animation_0jcsu")
}

[node name="SettingsMenu" type="Control"]
process_mode = 3
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_iqj4s")
script = ExtResource("2_hv8ts")

[node name="Darken" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.235294)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 5760.0
offset_bottom = 3240.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="MusicSliderContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 150)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/VBoxContainer/HBoxContainer/MusicSliderContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "ГРОМКОСТЬ МУЗЫКИ
"

[node name="MusicVolSlider" type="HSlider" parent="CenterContainer/VBoxContainer/HBoxContainer/MusicSliderContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
min_value = -72.0
max_value = 0.0
step = 0.0

[node name="SFXSliderContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 150)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/VBoxContainer/HBoxContainer/SFXSliderContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "ГРОМКОСТЬ звуков"

[node name="SFXVolSlider" type="HSlider" parent="CenterContainer/VBoxContainer/HBoxContainer/SFXSliderContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
min_value = -72.0
max_value = 0.0
step = 0.0

[node name="PauseMenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "ИГРАТ"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a356f")
}
autoplay = "open settings menu"
speed_scale = 3.2

[connection signal="pressed" from="CenterContainer/VBoxContainer/PauseMenuButton" to="." method="_on_pause_menu_button_pressed"]
